--- a/src/pages/layout/header/Header.module.css
+++ b/src/pages/layout/header/Header.module.css
@@ -1,12 +1,14 @@
 .header {
+  width: 100vw;
   height: rem(84px);
-  margin-bottom: rem(120px);
+  margin-bottom: rem(40px);
   background-color: var(--mantine-color-body);
   border-bottom: rem(1px) solid
     light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
 }
 
 .inner {
+  width: 100vw;
   height: rem(84px);
   display: flex;
   align-items: center;
@@ -14,6 +16,7 @@
 }
 
 .links {
+  width: 100%;
   padding-top: var(--mantine-spacing-lg);
   height: rem(84px);
   display: flex;
@@ -27,12 +30,13 @@
 
 .mainLink {
   text-transform: uppercase;
-  font-size: var(--mantine-font-size-sm);
+  font-size: var(--mantine-font-size-md);
   color: light-dark(var(--mantine-color-gray-6), var(--mantine-color-dark-1));
-  padding: rem(7px) var(--mantine-spacing-sm);
+  padding: rem(3px) var(--mantine-spacing-sm);
   font-weight: 700;
-  border-bottom: rem(2px) solid transparent;
+  border-bottom: rem(3px) solid transparent;
   transition: border-color 100ms ease, color 100ms ease;
+  text-decoration: none;
 
   @mixin hover {
     color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
@@ -47,9 +51,10 @@
 
 .secondaryLink {
   color: light-dark(var(--mantine-color-gray-6), var(--mantine-color-dark-1));
-  font-size: var(--mantine-font-size-sm);
+  font-size: var(--mantine-font-size-md);
   text-transform: uppercase;
   transition: color 100ms ease;
+  text-decoration: none;
 
   @mixin hover {
     color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
