--- a/src/components/common/layout/header/Header.module.css
+++ b/src/components/common/layout/header/Header.module.css
@@ -7,6 +7,20 @@
     light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
 }
 
+.logoLink {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  padding: rem(3px) var(--mantine-spacing-sm);
+}
+
+.logoLink:hover {
+  background-color: light-dark(
+    var(--mantine-color-gray-1),
+    var(--mantine-color-dark-3)
+  );
+}
+
 .inner {
   width: 100vw;
   height: rem(84px);
@@ -45,7 +59,7 @@
 
   &[data-active] {
     color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
-    border-bottom-color: var(--mantine-color-blue-6);
+    border-bottom-color: var(--mantine-color-cyan-6);
   }
 }
 
